--- a/templates/core/bookings.html
+++ b/templates/core/bookings.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 {% block content %}
     <div class="container h-full px-5 mx-auto my-12">
-        <p class="text-3xl text-primary">Bookings</p>
+        <h1 class="text-2xl font-bold sm:text-3xl text-primary">Bookings</h1>
         <hr class="mt-4 mb-8 border-gray-300">
         <div class="relative overflow-x-auto bg-white rounded-lg shadow-md">
             <table class="w-full text-xs text-left sm:text-sm">
