--- a/templates/core/checkout.html
+++ b/templates/core/checkout.html
@@ -7,11 +7,11 @@
     <div class="container h-full px-5 mx-auto mt-12">
         <div class="grid grid-cols-1 gap-10 lg:grid-cols-2">
             <div class="col-span-1 p-6 border-2 rounded-3xl">
-                <p class="text-3xl font-light text-text">Order Summary</p>
+                <h1 class="text-3xl font-light text-text">Order Summary</h1>
                 <hr class="my-4">
                 {% for flight, fare, price in flights %}
                     <div>
-                        <p class="text-lg font-bold text-text">{{ flight.origin }} - {{ flight.destination }}</p>
+                        <h2 class="text-lg font-bold text-text">{{ flight.origin }} - {{ flight.destination }}</h2>
                         <p>
                             {{ flight.outbound_date }} | {{ flight.dep_time }} |
                             {% if num_passengers == '1' %}
@@ -25,10 +25,10 @@
                     </div>
                     <hr class="my-4">
                 {% endfor %}
-                <p class="text-xl font-bold text-primary">Total: €{{ total_price }}</p>
+                <h3 class="text-xl font-bold text-primary">Total: €{{ total_price }}</h3>
             </div>
             <div class="col-span-1 p-6 bg-white shadow-lg rounded-3xl">
-                <p class="mb-4 text-3xl font-bold text-primary ">Payment details</p>
+                <h2 class="mb-4 text-3xl font-bold text-primary ">Payment details</h2>
                 <form action="" method="post" class="grid grid-cols-2 gap-4">
                     {% csrf_token %}
                     <input type="text"
