--- a/templates/core/order-confirmation.html
+++ b/templates/core/order-confirmation.html
@@ -5,10 +5,10 @@
 {% endblock title %}
 {% block content %}
     <div class="container flex flex-col items-center self-stretch justify-center flex-grow h-full px-5 mx-auto ">
-        <p class="text-3xl font-bold text-center text-primary">Cleared for takeoff!</p>
-        <p class="text-lg text-center">
+        <h1 class="text-3xl font-bold text-center text-primary">Cleared for takeoff!</h1>
+        <h2 class="text-lg text-center">
             You booking reference is <strong>{{ booking.get_shorthand }}</strong>
-        </p>
+        </h2>
         <a href="{% url 'bookings' %}"
            class="flex items-center h-12 px-4 mt-4 text-white rounded-full bg-primary">View Bookings</a>
     </div>
