--- a/templates/core/search-results.html
+++ b/templates/core/search-results.html
@@ -10,8 +10,8 @@
             <div>
                 <!-- PAGE HEADER -->
                 <div class="mt-4">
-                    <h2 class="text-sm font-light text-text sm:text-lg">
-                        Select <strong class="font-semibold text-primary">outbound</strong> flight
+                    <h2 class="text-lg font-light text-text sm:text-xl">
+                        Select <strong class="font-bold text-primary">outbound</strong> flight
                     </h2>
                 </div>
                 <div class="mb-4">
@@ -31,8 +31,8 @@
                 <hr class="my-12">
                 <!-- PAGE HEADER -->
                 <div class="mt-4">
-                    <h2 class="text-sm font-light text-text sm:text-lg">
-                        Select <strong class="font-semibold text-primary">return</strong> flight
+                    <h2 class="text-lg font-light text-text sm:text-xl">
+                        Select <strong class="font-bold text-primary">return</strong> flight
                     </h2>
                 </div>
                 <div class="mb-4">
