--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -1,7 +1,4 @@
 {% load static %}
-
-
-
 <div id="{{ leg }}-flights" data-leg="{{ leg }}">
     <!-- ALT DATE SELECTOR -->
     <div class="grid items-center w-full h-20 grid-cols-5 grid-rows-1 border-2 border-gray-200 rounded-full shadow-inner">
@@ -17,9 +14,10 @@
                      hx-trigger="click"
                      hx-get="alt_dates/?date={{ dateitem|date:'Y-m-d' }}&origin={{ origin }}&destination={{ destination }}&leg={{ leg }}"
                      hx-swap="outerHTML"
-                     hx-indicator="#indicator-{{leg}}"
+                     hx-indicator="#indicator-{{ leg }}"
                      hx-target="#{{ leg }}-flights">
-                    <div class="py-4 font-semibold text-center text-md sm:text-lg altDate" id="{{ dateitem|date:'Y-m-d' }}">{{ dateitem|date:'j M' }}</div>
+                    <div class="py-4 font-semibold text-center text-md sm:text-lg altDate"
+                         id="{{ dateitem|date:'Y-m-d' }}">{{ dateitem|date:'j M' }}</div>
                     {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
                 </div>
             {% endif %}
@@ -27,18 +25,24 @@
     </div>
     {% comment %} {% for dateitem in slider_date_list %}<div>{{dateitem}}</div>{% endfor %} <div>DATE: {{date}}</div> {% endcomment %}
     <div id="" class="">
-        <div role="status" id="indicator-{{leg}}" class="z-10 justify-center my-20 my-indicator">
-            <svg aria-hidden="true" class="w-40 h-40 mr-2 text-gray-200 animate-spin dark:text-gray-200 fill-primary" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
-                <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+        <div role="status"
+             id="indicator-{{ leg }}"
+             class="z-10 justify-center my-20 my-indicator">
+            <svg aria-hidden="true"
+                 class="w-40 h-40 mr-2 text-gray-200 animate-spin dark:text-gray-200 fill-primary"
+                 viewBox="0 0 100 101"
+                 fill="none"
+                 xmlns="http://www.w3.org/2000/svg">
+                <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor" />
+                <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill" />
             </svg>
             <span class="sr-only">Loading...</span>
         </div>
         {% if not flight_results %}
-        <div class="flex flex-col justify-center text-center border-[1px] border-gray-300 rounded-3xl px-8 py-16 mt-6">
-            <p class="text-2xl font-bold text-primary">Oops!</p>
+            <div class="flex flex-col justify-center text-center border-[1px] border-gray-300 rounded-3xl px-8 py-16 mt-6">
+                <p class="text-2xl font-bold text-primary">Oops!</p>
                 <p class="text-lg font-semibold text-text">Looks like there's no flights on that date. Please pick another date.</p>
-        </div>
+            </div>
         {% endif %}
         {% for flight in flight_results %}
             <!-- SHOW AVAILABLE FLIGHTS -->
@@ -51,7 +55,7 @@
                             <div class="text-xl font-bold md:text-4xl text-text">{{ flight.dep_time|time:'H:i' }}</div>
                         </div>
                         <div class="mx-8">
-                            <div class="text-sm font-light text-center md:text-md text-text">[Duration]</div>
+                            {% comment %} <div class="text-sm font-light text-center md:text-md text-text">[Duration]</div> {% endcomment %}
                             <img src="{% static 'img/flight-duration-illo.svg' %}"
                                  alt=""
                                  width="227px"
@@ -80,7 +84,7 @@
                             <!-- STANDARD FARE -->
                             <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
                                 <div>
-                                    <p class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Standard</p>
+                                    <h2 class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Standard</h2>
                                     <ul class="leading-4">
                                         <li class="my-4 list-disc list-inside">
                                             Small carry-on item
@@ -103,7 +107,7 @@
                             <!-- PLUS FARE -->
                             <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
                                 <div>
-                                    <p class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Plus</p>
+                                    <h2 class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Plus</h2>
                                     <ul class="leading-4">
                                         <li class="my-4 list-disc list-inside">
                                             Small carry-on item
@@ -133,7 +137,7 @@
                             <!-- PREMIUM FARE -->
                             <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
                                 <div>
-                                    <p class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Premium</p>
+                                    <h2 class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Premium</h2>
                                     <ul class="leading-4">
                                         <li class="my-4 list-disc list-inside">
                                             Small carry-on item
