--- a/templates/partials/passengers-edit.html
+++ b/templates/partials/passengers-edit.html
@@ -38,9 +38,10 @@
 {% elif request.method == 'POST' or request.method == 'DELETE' %}
     <div hx-target="this" hx-swap="outerHTML" class="max-w-[400px]">
         <div class="flex items-center justify-between">
-            <p class="text-lg font-bold text-primary">Passengers</p>
+            <h3 class="text-xl font-bold text-primary">Passengers</h3>
             <button class="rounded-full py-2 px-4 border-[1px] border-primary hover:bg-primary hover:text-white transition-all duration-300"
-                    hx-get="/bookings/detail/edit/{{ booking.id }}">Edit Passengers</button>
+                    hx-get="/bookings/detail/edit/{{ booking.id }}"
+                    aria-label="Edit passengers">Edit Passengers</button>
         </div>
         <ol class="list-decimal max-w-[400px]">
             {% for passenger in passengers %}
