chore: add form validation

--- a/templates/partials/passengers-edit.html
+++ b/templates/partials/passengers-edit.html
@@ -23,13 +23,15 @@
                            name="first-{{ passenger.id }}"
                            id="first-{{ passenger.id }}"
                            value="{{ passenger.first }}"
-                           aria-label="First name: {{ passenger.first }}">
+                           aria-label="First name: {{ passenger.first }}"
+                           required>
                     <input class="bg-transparent border-primary border-x-0 border-t-0 border-b-[1px] col-span-1"
                            type="text"
                            name="last-{{ passenger.id }}"
                            id="last-{{ passenger.id }}"
                            value="{{ passenger.last }}"
-                           aria-label="Last name: {{ passenger.last }}">
+                           aria-label="Last name: {{ passenger.last }}"
+                           required>
                 </li>
             {% endfor %}
         </ol>
