style: add bottom margin to search box

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -19,7 +19,7 @@
                      alt="Backdrop image showing illustrated airplanes sweeping across the background with short dashed lines trailing from behind in a smooth arc">
             </div>
             <!-- OUTER CONTAINER FOR FORM -->
-            <div class="container relative flex items-center h-auto p-8 mx-auto bg-white rounded-3xl drop-shadow-lg">
+            <div class="container relative flex items-center h-auto p-8 mx-auto bg-white rounded-3xl drop-shadow-lg mb-8">
                 <!-- FORM CONTRAINER -->
                 <div class="container mx-auto">
                     <form action="{% url 'search-results' %}" method="get" autocomplete="off">
