fix: add about link to hamburger nav

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -162,7 +162,7 @@
                         <a href="#" class="px-4 text-white">Blog</a>
                     </li>
                     <li>
-                        <a href="#" class="px-4 text-white">About</a>
+                        <a href="{% url 'about' %}" class="px-4 text-white">About</a>
                     </li>
                 </ul>
             </div>
