--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -98,7 +98,7 @@
                             <a href="{% url 'bookings' %}" class="px-4 text-white">Bookings</a>
                         </li>
                         <li>
-                            <a href="#" class="text-white px-4 border-x-[1px]">Blog</a>
+                            <a href="{% url 'blog' %}" class="text-white px-4 border-x-[1px]">Blog</a>
                         </li>
                         <li>
                             <a href="{% url 'about' %}" class="px-4 text-white">About</a>
@@ -164,7 +164,7 @@
                         <a href="{% url 'bookings' %}" class="px-4 text-white">Bookings</a>
                     </li>
                     <li>
-                        <a href="#" class="px-4 text-white">Blog</a>
+                        <a href="{% url 'blog' %}" class="px-4 text-white">Blog</a>
                     </li>
                     <li>
                         <a href="{% url 'about' %}" class="px-4 text-white">About</a>
