--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -9,19 +9,21 @@
             <div class="px-6 m-auto xl:container md:px-12 xl:px-6">
                 <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
                     {% for post in posts %}
-                        <div class="p-6 bg-white shadow-xl sm:p-8 rounded-3xl">
+                        <div class="flex flex-col p-6 transition-all duration-300 ease-in-out bg-white shadow-sm hover:scale-[1.03] hover:shadow-xl sm:p-8 rounded-3xl">
                             <div class="relative overflow-hidden rounded-xl">
                                 <img src="{{ post.cover_image.url }}"
                                      width=""
                                      height=""
                                      class="object-cover object-top w-full h-64 transition duration-500 group-hover:scale-105" />
                             </div>
-                            <div class="relative mt-6">
-                                <h3 class="text-2xl font-semibold text-text">{{post.title}}</h3>
-                                <p class="mt-6 mb-8 text-text">{{post.content|truncatewords:14}}</p>
-                                <a class="inline-block" href="#">
-                                    <span class="text-primary">Read more</span>
-                                </a>
+                            <div class="flex flex-col justify-between flex-grow mt-6">
+                                <div>
+                                    <h3 class="text-2xl font-semibold text-text">{{ post.title }}</h3>
+                                    <p class="mt-6 mb-8 text-text">{{ post.content|truncatewords:14 }}</p>
+                                </div>
+                                
+                                    <span class="text-xl font-semibold text-primary"><a class="p-4 -m-4 underline transition-all duration-500 decoration-transparent hover:decoration-primary underline-offset-0 hover:underline-offset-8" href="{% url 'blog-detail' id=post.id %}">Read more</a></span>
+                                
                             </div>
                         </div>
                     {% endfor %}
