--- a/templates/blog/blog-detail.html
+++ b/templates/blog/blog-detail.html
@@ -7,7 +7,7 @@
     <div class="relative flex items-center w-screen overflow-hidden sm:max-h-80">
         <div class="absolute w-full h-full opacity-50 bg-gradient-to-r from-40% from-primary to-fuchsia-500"></div>
         <img class="object-cover w-full h-full" src="{{ post.cover_image.url }}">
-        <h1 class="container absolute px-5 text-4xl font-bold text-center text-white -translate-x-1/2 left-1/2">
+        <h1 class="container absolute px-5 text-xl font-bold text-center text-white -translate-x-1/2 sm:text-4xl left-1/2">
             {{ post.title }}
         </h1>
     </div>
