--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -1,5 +1,18 @@
 {% load static %}
 <div id="{{ leg }}-flights" data-leg="{{ leg }}">
+    {% if messages %}
+        {% for message in messages %}
+        <div class="flex items-center p-6 mb-4 text-lg text-blue-800 border border-blue-800 rounded-lg bg-blue-50" role="alert">
+            <svg class="flex-shrink-0 inline w-4 h-4 mr-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+              <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+              <span class="font-medium">Oops!</span> {{message}}
+            </div>
+          </div>
+        {% endfor %}
+    {% endif %}
     <!-- ALT DATE SELECTOR -->
     <div class="grid items-center w-full h-20 grid-cols-5 grid-rows-1 border-2 border-gray-200 rounded-full shadow-inner">
         {% for dateitem in slider_date_list %}
