style: fix double border in nav item

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -98,7 +98,7 @@
                             <a href="{% url 'home-page' %}" class="px-4 text-white">Home</a>
                         </li>
                         <li>
-                            <a href="{% url 'bookings' %}" class="px-4 text-white border-x-[1px]">Bookings</a>
+                            <a href="{% url 'bookings' %}" class="px-4 text-white border-l-[1px]">Bookings</a>
                         </li>
                         <li>
                             <a href="{% url 'blog' %}" class="text-white px-4 border-x-[1px]">Blog</a>
