--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -143,7 +143,8 @@
             <!-- EXPANDED MENU ON CLICK -->
             <div class="absolute z-50 flex items-center justify-center w-screen overflow-hidden transition-all duration-500 ease-in-out bg-primary top-full max-h-0"
                  id="hamburger-menu-expanded">
-                <ul id="hamburger-nav-links" class="flex flex-col items-center gap-10 text-2xl">
+                <ul id="hamburger-nav-links"
+                    class="flex flex-col items-center gap-10 text-2xl">
                     <li>
                         {% if user.is_authenticated %}
                             <p class="text-white ">
@@ -178,6 +179,26 @@
                 </ul>
             </div>
         </header>
+        {% if messages %}
+            {% for message in messages %}
+                <div class="relative" id="{{ message.tags }}-message-container">
+                    <div class="container absolute px-5 mx-auto overflow-hidden transition-all duration-700 -translate-x-1/2 left-1/2 -translate-y-[500px]"
+                         id="{{ message.tags }}-message">
+                        <div class="flex items-center p-3 my-3 text-sm text-blue-800 border border-blue-800 rounded-lg bg-blue-50"
+                             role="alert">
+                            <svg class="flex-shrink-0 inline w-4 h-4 mr-3"
+                                 aria-hidden="true"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 fill="currentColor"
+                                 viewBox="0 0 20 20">
+                                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+                            </svg>
+                            {{ message }}
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        {% endif %}
         <!-- CONTENT BLOCK -->
         {% block content %}
         {% endblock content %}
