--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -181,10 +181,10 @@
         </header>
         {% if messages %}
             {% for message in messages %}
-                <div class="relative" id="{{ message.tags }}-message-container">
-                    <div class="container absolute px-5 mx-auto overflow-hidden transition-all duration-700 -translate-x-1/2 left-1/2 -translate-y-[500px]"
-                         id="{{ message.tags }}-message">
-                        <div class="flex items-center p-3 my-3 text-sm text-blue-800 border border-blue-800 rounded-lg bg-blue-50"
+                <div class="relative" id="message-container">
+                    <div class="container absolute px-5 mx-auto transition-all duration-500 -translate-y-[1000px] -translate-x-1/2 left-1/2"
+                         id="message">
+                        <div class="flex items-center p-3 my-3 text-sm {% if message.tags == 'info' %} text-blue-800 border border-blue-800 bg-blue-50 {% elif message.tags == 'success' %}text-green-800 border border-green-800 bg-green-50 {% endif %}rounded-lg "
                              role="alert">
                             <svg class="flex-shrink-0 inline w-4 h-4 mr-3"
                                  aria-hidden="true"
