style: modify hover states; other minor tweaks

--- a/templates/core/bookings-detail.html
+++ b/templates/core/bookings-detail.html
@@ -16,7 +16,7 @@
                     hx-confirm=""
                     hx-delete="/bookings/detail/{{ booking.id }}"
                     id="cancel-booking"
-                    class="flex items-center h-12 p-3 text-center  border-[1px] rounded-full border-primary hover:bg-primary hover:text-white transition-all duration-300">
+                    class="flex items-center px-4 py-2 text-center  border-[1px] rounded-full border-primary hover:bg-primary hover:text-white transition-all duration-300">
                 Cancel Booking
             </button>
         </div>
